syntax = "proto3";

import "common.proto";

package chat;

option java_multiple_files = true;
option java_package = "com.chatapp.chat";


service ChatService {

  rpc ReceiveMessage(common.GetRequest) returns (stream ChatMessage);
  rpc SendMessage(SendMessageRequest) returns (common.ServiceResponse);
  rpc GetMessages(GetChatRequest) returns (MessageList);
}

message SendMessageRequest {

  string token = 1;
  common.User reciever = 2;
  string message = 3;
}

message ChatMessage {

  int32 sender_id = 1;
  string message = 2;
  string timestamp = 3;
  bool seen = 4;
}

message MessageList {

  repeated ChatMessage messages = 1;
}

message GetChatRequest {

  string token = 1;
  common.User friend = 2;
}


