syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "com.chatapp.common";

message User {
  string username = 1;
  int32 user_id = 2;
}

message Empty {
}

message ServiceResponse {

  ResponseCode response_code = 1;
}

message GetRequest {

  LoginToken token = 1;
}

message LoginToken {

  string token = 1;
} 

enum ResponseCode {

  SUCCESS = 0;
  INTERNAL_ERROR = 1;
  INVALID_CREDENTIALS = 2;
  INVALID_ARGUMENTS = 3;
}